Add alerts page structure and styling

--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -151,6 +151,7 @@ $border-radius-sm: 1px;
 // @import "revised/pages/bikes/edit_accessories";
 // @import "revised/pages/bikes/edit_photos";
 // @import "revised/pages/bikes/edit_publicize";
+// @import "revised/pages/bikes/edit_alert";
 
 // // Bike registration page styles
 // @import "revised/pages/bikes/choose_registration";
