--- a/app/assets/stylesheets/revised/mixins/_colors.scss
+++ b/app/assets/stylesheets/revised/mixins/_colors.scss
@@ -29,6 +29,8 @@ $header-font-nocolor: $gray-dark;
 $less-strong-font-color: $gray-light;
 
 $black-off: #111;
+$black: #000;
+$white: #fff;
 
 // Nav colors
 $primary-nav-background: $black-off;
