--- a/app/javascript/stylesheets/_admin.scss
+++ b/app/javascript/stylesheets/_admin.scss
@@ -46,6 +46,11 @@
   @extend .row;
   border-bottom: 1px solid $gray-400;
   padding-bottom: 20px;
+  h1, h2, h3 {
+    @include media-breakpoint-down(sm) {
+      font-size: 1.5rem;
+    }
+  }
   ul {
     @extend .nav;
     @extend .nav-pills;
