--- a/app/views/bikes/edit_alert.html.haml
+++ b/app/views/bikes/edit_alert.html.haml
@@ -1,9 +1,7 @@
-= form_for @bike, multipart: true, html: { class: "primary-edit-bike-form" } do |f|
-  = f.hidden_field :stolen
-
+.primary-edit-bike-form
   .form-well-container.container{ class: "edit-bike-page-#{@edit_template}" }
     .row
-      = render partial: "/bikes/edit_primary_menu"
+      = render partial: "/bikes/edit_primary_menu", locals: { is_disabled: true}
 
       .col-md-8.form-well#form_well_wrap
         .form-wrap
