--- a/app/assets/stylesheets/revised/pages/organized/_ambassador_dashboard.scss
+++ b/app/assets/stylesheets/revised/pages/organized/_ambassador_dashboard.scss
@@ -1,16 +1,18 @@
 #organized_ambassador_dashboards_show {
   .ambassador-toggle {
-    padding: 0;
+    padding: 1rem 0;
     text-align: center;
+    .btn {
+      margin: auto;
+    }
     @include media-breakpoint-down(md) {
-      font-size: 90%;
-      width: 7rem;
+      width: 90px;
       .btn {
         padding: 0.5rem 0;
         white-space: normal;
         display: block;
-        width: 90%;
-        margin: 1rem auto;
+        max-width: 90%;
+        font-size: 80%;
       }
     }
   }
