--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -289,6 +289,9 @@
         Name
       %th
         Email
+      - if @organization.ambassador?
+        %th
+          Activities completed
       %th
         Total indexed
     %tbody
@@ -298,6 +301,11 @@
             = link_to "&rarr;".html_safe, edit_admin_user_url(user)
           %td
             = user.name
+          - if @organization.ambassador?
+            %td
+              - if user.ambassador?
+                - ambassador = Ambassador.find(user.id)
+                = ambassador.progress_count
           %td
             = user.email
           %td
