--- a/app/views/admin/news/_listicle_form.html.haml
+++ b/app/views/admin/news/_listicle_form.html.haml
@@ -1,4 +1,4 @@
-= f.submit 'Save', class: 'button-green save-listicles'
+= f.submit 'Save', class: 'btn btn-success'
 #listicle_image
   - @blog.listicles.each do |l|
     - if l.image.present?
