--- a/app/views/admin/recoveries/edit.html.haml
+++ b/app/views/admin/recoveries/edit.html.haml
@@ -73,23 +73,24 @@
           %td
             = @recovery.address
   .col-sm-12.col-lg-6
-    .card.mt-4.mb-4
+    .card
       .card-header
         Recovery Description
       .card-body
         = @recovery.recovered_description
-.row
-  .col-md-6
-    - if @recovery.displayed?
-      %h2
-        = link_to "Recovery displayed", edit_admin_recovery_display_url(@recovery.recovery_display)
-  .col-md-3
-    - if !@recovery.displayed?
-      = link_to 'Share recovery', new_admin_recovery_display_path(stolen_record_id: @recovery.id), class: 'btn btn-primary'
-  .col-md-3
-    - if !@recovery.not_displayed?
+.row.justify-content-end
+  - if @recovery.waiting_on_decision?
+    .col-md-2
       = button_to "Not Displayable", admin_recovery_path(id: @recovery.id, stolen_record: {is_not_displayable: true}), method: :put, class: "btn btn-warning"
-    - else
+    .col-md-2
+      = link_to 'Share recovery', new_admin_recovery_display_path(stolen_record_id: @recovery.id), class: 'btn btn-primary'
+  - elsif @recovery.displayed?
+    .col-md-2
+      = link_to "Edit Recovery", edit_admin_recovery_display_url(@recovery.recovery_display), class: "btn btn-primary"
+    .col-md-2
+      = link_to "Delete recovery display", admin_recovery_display_url(@recovery.recovery_display), method: :delete, confirm: "Are you sure?", class: "btn btn-danger"
+  - elsif @recovery.not_displayed?
+    .col-md-2
       = button_to "Mark Eligible for display", admin_recovery_path(id: @recovery.id, stolen_record: {mark_as_eligible: true}), method: :put, class: "btn btn-success"
 %hr
 - url = {action: "update", controller: "recoveries"}
@@ -100,14 +101,13 @@
       - if @recovery.errors.any?
         = render partial: "/shared/errors", locals: { name: "Recovery", obj: @recovery}
       .form-group
-        = f.label :index_helped_recovery
         = f.check_box :index_helped_recovery
+        = f.label :index_helped_recovery
 
       .form-group
-        = f.label :can_share_recovery
         = f.check_box :can_share_recovery
+        = f.label :can_share_recovery
       = submit_tag "Update the recovery", class: "btn btn-success"
-
 
   / .control-group.recovery-input-field
   /   = f.label :recovery_share, "Story to share",   class: "control-label"
