--- a/app/views/layouts/new_admin.html.haml
+++ b/app/views/layouts/new_admin.html.haml
@@ -44,6 +44,8 @@
                                 { title: "POS Integration", path: "https://posintegration.bikeindex.org", match_controller: false },
                                 { title: "Ambassador Activities", path: admin_ambassador_tasks_path, match_controller: true },
                                 { title: "Completed Ambassador Activities", path: admin_ambassador_task_assignments_path, match_controller: true },
+                                { title: "Theft Alerts", path: admin_theft_alerts_path, match_controller: true },
+                                { title: "Theft Alert Plans", path: admin_theft_alert_plans_path, match_controller: true },
                                 { title: "Payments", path: admin_payments_path, match_controller: true },
                                 { title: "Paid Features", path: admin_paid_features_path, match_controller: true },
                                 { title: "Invoices", path: admin_invoices_path, match_controller: true },
