--- a/app/views/admin/news/edit.html.haml
+++ b/app/views/admin/news/edit.html.haml
@@ -94,14 +94,16 @@
 
 
 - unless @blog.is_listicle
-  %ul#public_images{ :"data-order-url" => order_public_images_url }
-    - if @blog.public_images
-      = render partial: "/public_images/public_image", collection: @blog.public_images, as: :public_image
-  %section
-    = render partial: "public_images/admin_new_form", locals: { imageable_type: 'Blog' }
-.alert.alert-info
-  %p
-    The content blocks accept HTML or Markdown for styling and linking things. Check out this #{link_to "Markdown cheat sheet", "https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet", target: "_blank"} if you're curious.
+  .card.mt-4
+    .card-body.bg-light
+      %ul.list-unstyled#public_images{ :"data-order-url" => order_public_images_url }
+        - if @blog.public_images
+          = render partial: "/public_images/public_image", collection: @blog.public_images, as: :public_image
+      %section
+        = render partial: "public_images/admin_new_form", locals: { imageable_type: 'Blog' }
+    .alert.alert-info
+      %p
+        The content blocks accept HTML or Markdown for styling and linking things. Check out this #{link_to "Markdown cheat sheet", "https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet", target: "_blank"} if you're curious.
 
 .mt-4.clearfix
   = link_to "Delete post", admin_news_url(@blog), method: :delete, confirm: "Are you sure?", class: "btn btn-danger"
