--- a/app/views/admin/news/edit.html.haml
+++ b/app/views/admin/news/edit.html.haml
@@ -1,7 +1,10 @@
-%h1
-  Editing that #{@dignified_name}!
-%p
-  = link_to "Back to all", admin_news_index_url
+.row
+  .col-md-6
+    %h1
+      Editing that #{@dignified_name}!
+  .col-md-6
+    %p
+      = link_to "Back to all", admin_news_index_url, class: "float-right btn btn-primary"
 - if params[:show_photos]
   %p
     - if @blog.is_listicle
