--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -184,6 +184,7 @@ $zoom-img-wrap-z-index: $zindex-navbar-fixed + 100;
 // Bike form pages
 @import "revised/pages/bikes/new";
 @import "revised/pages/bikes/edit_bike_details";
+@import "revised/pages/bikes/edit_bike_groups";
 @import "revised/pages/bikes/edit_remove";
 @import "revised/pages/bikes/edit_accessories";
 @import "revised/pages/bikes/edit_photos";
