--- a/app/javascript/stylesheets/_admin.scss
+++ b/app/javascript/stylesheets/_admin.scss
@@ -3,7 +3,7 @@
   overflow-x: scroll;
 }
 
-.admin-bike-partial .admin-public-image {
+.admin-bike-partial {
   .admin-image-thumb {
     img {
       max-width: 100%;
