--- a/app/views/bikes/edit_alert.html.haml
+++ b/app/views/bikes/edit_alert.html.haml
@@ -11,13 +11,39 @@
 
           %form#bikeindex-stripe-bike-alert-form
             .row
-              = render partial: "pricing_plan", collection: @pricing_plans
+              = render @theft_alert_plans
+
+        - if @theft_alerts.present?
+          .row &nbsp;
+          .row
+            .col-md-12
+              %h3 Past Bike Index Alerts
+              %table.table.table-bordered
+                %thead.small-header
+                  %tr
+                    %th Created at
+                    %th Plan
+                    %th Status
+                    %th Begins at
+                    %th Ends at
+                    %th Facebook post
+                %tbody
+                  - @theft_alerts.each do |alert|
+                    - plan = alert.theft_alert_plan
+                    %tr
+                      %td.convertTime= l(alert.created_at, format: :convert_time)
+                      %td #{plan.name} (#{plan.duration_days} days)
+                      %td= alert.status
+                      %td.convertTime= l(alert.begin_at, format: :convert_time) if alert.begin_at.present?
+                      %td.convertTime= l(alert.end_at, format: :convert_time) if alert.end_at.present?
+                      %td= link_to "link", alert.facebook_post_url, target: "_blank" if alert.facebook_post_url.present?
+
 
 %script{ src: "https://checkout.stripe.com/checkout.js" }
 - stripe_data = { key: ENV["STRIPE_PUBLISHABLE_KEY"], email: current_user&.email, type:  "Pay" }
-- theft_alerts_path = ""
 = form_tag theft_alerts_path, id: "stripe_form", data: stripe_data do
+  = hidden_field_tag :bike_id, @bike.id
+  = hidden_field_tag :theft_alert_plan_id
   = hidden_field_tag :stripe_token
   = hidden_field_tag :stripe_amount
   = hidden_field_tag :stripe_email
-  = hidden_field_tag :is_payment, true
