--- a/app/views/admin/news/edit.html.haml
+++ b/app/views/admin/news/edit.html.haml
@@ -1,127 +1,110 @@
-%header.with-subtitle#blog-edit
-  %h1
-    Editing that #{@dignified_name}!
-  %p
-    = link_to "Back to all", admin_news_index_url
+%h1
+  Editing that #{@dignified_name}!
+%p
+  = link_to "Back to all", admin_news_index_url
 - if params[:show_photos]
-  .well
-    %p
-      - if @blog.is_listicle
-        - images = @blog.listicles.map(&:image_url)
-      - else
-        - images = @blog.public_images.map(&:image_url)
-      - images.each do |i|
-        %br
-        = link_to i, i
-      - images.each do |i|
-        %br
-        = image_tag i
+  %p
+    - if @blog.is_listicle
+      - images = @blog.listicles.map(&:image_url)
+    - else
+      - images = @blog.public_images.map(&:image_url)
+    - images.each do |i|
+      %br
+      = link_to i, i
+    - images.each do |i|
+      %br
+      = image_tag i
 
 
+- url = {action: "update", controller: "news"}
+= form_for [:admin, @blog], :url => url do |f|
+  - if @blog.errors.any?
+    = render partial: "/shared/errors", locals: { name: "Blog", obj: @blog }
+  = f.hidden_field :index_image_id
+  - if @blog.is_listicle
+    = render partial: "listicle_form", locals: { f: f }
+  - else
+    = render partial: "form", locals: { f: f }
+    .card
+      .card-body.bg-light
+        .row
+          .col-md-6
+            .form-group
+              %label
+                Published Date:
+              .form-check.form-check-inline
+                = f.check_box :post_now, class: "form-check-input"
+                = f.label :post_now, class: "form-check-label"
+              %p
+                = @blog.published_at.strftime("%m-%d-%Y")
+              / JS Stuff
+              %a#change_published_date{ href: "#", data: {date: "#{@blog.published_at.strftime("%m-%d-%Y")}" }}
+                edit
 
-.blog-entry-fields
-  / .well
-  .form.form-horizontal#chosen-container
-    - url = {action: "update", controller: "news"}
-    = form_for [:admin, @blog], :url => url do |f|
-      - if @blog.errors.any?
-        #alert-block
-          .alert.alert-error
-            %h4
-              Please fix the following
-              = pluralize(@blog.errors.count, "error")
-            %ul
-              - @blog.errors.full_messages.each do |msg|
-                %li
-                  = msg
-      = f.hidden_field :index_image_id
-      - if @blog.is_listicle
-        = render partial: "listicle_form", locals: { f: f }
-      - else
-        = render partial: "form", locals: { f: f }
-
-
-      .blog-final-actions.row-fluid
-        .well
-          .clearfix
-            .span6
-              .control-group
-                %label.control-label
-                  Published date
-                .controls.radio-controls
-                  %label.checkbox
-                    = f.check_box :post_now
-                    Publish now
-                .controls.extra-field
-                  = @blog.published_at.strftime("%m-%d-%Y")
-
-                  %a#change_published_date{ href: "#", data: {date: "#{@blog.published_at.strftime("%m-%d-%Y")}" }}
-                    edit
-
-              .control-group#blog-date.initially-hidden
-                = label :post_date, "Post date", class: "control-label"
-                .controls
-                  #post-date-field
-                    - @blog.post_date = TimeParser.round(@blog.published_at || Time.current, "seconds")
-                    = f.hidden_field :timezone, value: "", class: "hiddenFieldTimezone"
-                    = f.datetime_local_field :post_date, max: Time.current + 1.week, step: 60, required: true, class: 'form-control'
-
-              .control-group
-                = f.label :published, "Published", class: "control-label"
-                .controls
-                  = f.check_box :published
-              .control-group.chosen-select
-                %label.control-label
-                  Author email
-                .controls
-                  = f.email_field :user_email, placeholder: 'your email', required: true, value: @blog.user.email
-                  - user = User.fuzzy_email_find(@blog.user.email)
-                  - unless user.present? && user.userlink.present?
-                    Please #{link_to "turn on your personal page", my_account_url, target: '_blank'}, or link your twitter!
-            .span6
-              .control-group.tags
-                = f.label :tags, "Tags, should include a main category: Tech, Design, or Update", class: "control-label"
-                .controls
-                  = f.text_area :tags, placeholder: "Separate tags with commas"
-                .control-group
-                  = f.label :update_title, "Update URL", class: "control-label"
-                  .controls
-                    = f.check_box :update_title
-                    %span.this-will-break-links
-                      This will break existing links!
-
-              .control-group
-                .controls
-                  %label.index-image-select
-                    <input type="radio" name="index_image_id" value="0" class="index_image_0">
-                    No primary image
-
-          .blog-field
-            = f.text_field :title, placeholder: "Blog title"
-          .blog-field
-            = f.text_field :description_abbr, placeholder: "Description/subtitle shown on the homepage - will be the text below unless you enter something."
-            .description_abbr
+            .form-group#blog-date{style: "display: none"}
+              = label :post_date, "Post date", class: "control-label"
+              #post-date-field
+                - @blog.post_date = TimeParser.round(@blog.published_at || Time.current, "seconds")
+                = f.hidden_field :timezone, value: "", class: "hiddenFieldTimezone"
+                = f.datetime_local_field :post_date, max: Time.current + 1.week, step: 60, required: true, class: 'form-control'
+          .col-md-6
+            .form-group
+              .form-check.form-check-inline
+                = f.check_box :published, class: "form-check-input"
+                = f.label :published, "Published", class: "form-check-label"
+            .form-group
+              = f.label :user_email, "Author email"
+              = f.email_field :user_email, placeholder: 'your email', required: true, value: @blog.user.email, class: "form-control"
+              - user = User.fuzzy_email_find(@blog.user.email)
+              - unless user.present? && user.userlink.present?
+                Please #{link_to "turn on your personal page", my_account_url, target: '_blank'}, or link your twitter!
+        .row
+          .col-md-6
+            .form-group
+              = f.label :tags, "Tags, should include a main category: Tech, Design, or Update", class: "control-label"
+              = f.text_area :tags, placeholder: "Separate tags with commas", class: "form-control"
+            .form-group
+              .form-check.form-check-inline
+              = f.check_box :update_title, class: "form-check-input"
+              = f.label :update_title, "Update URL", class: "form-check-label"
+            %span.text-danger
+              This will break existing links!
+          .col-md-6
+            .form-group
+              .controls
+                %label
+                  <input type="radio" name="index_image_id" value="0" class="index_image_0">
+                  No primary image
+        .row.mt-4
+          .col-md-6
+            .form-group
+              = f.text_field :title, placeholder: "Blog title", class: "form-control"
+            %em.less-strong
               = @blog.body_abbr
-
-          .padded
-            %a.button-blue.pull-left{target: "_blank", href: blog_url(@blog)}
+          .col-md-6
+            .form-group
+              = f.text_field :description_abbr, placeholder: "Description/subtitle shown on the homepage - will be the text below unless you enter something.", class: "form-control"
+        .row.mt-4
+          .col-2
+            %a.btn.btn-primary{target: "_blank", href: blog_url(@blog)}
               preview post
-            = f.submit 'Save', class: 'button-green pull-right'
+          .col-2
+            = f.submit 'Save', class: 'btn btn-success'
 
 
-  - unless @blog.is_listicle
-    .well
-      .add-blog-photos
-        %ul#public_images{ :"data-order-url" => order_public_images_url }
-          - if @blog.public_images
-            = render partial: "/public_images/public_image", collection: @blog.public_images, as: :public_image
-        %section
-          = render partial: "public_images/admin_new_form", locals: { imageable_type: 'Blog' }
 
-  .alert.alert-info
-    %p
-      The content blocks accept HTML or Markdown for styling and linking things. Check out this #{link_to "Markdown cheat sheet", "https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet", target: "_blank"} if you're curious.
+- unless @blog.is_listicle
+  .card.mt-4
+    .card-body.bg-light
+      %ul.list-unstyled#public_images{ :"data-order-url" => order_public_images_url }
+        - if @blog.public_images
+          = render partial: "/public_images/public_image", collection: @blog.public_images, as: :public_image
+      %section
+        = render partial: "public_images/admin_new_form", locals: { imageable_type: 'Blog' }
+    .alert.alert-info
+      %p
+        The content blocks accept HTML or Markdown for styling and linking things. Check out this #{link_to "Markdown cheat sheet", "https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet", target: "_blank"} if you're curious.
 
-  .padded.clearfix
-    = link_to "Delete post", admin_news_url(@blog), method: :delete, confirm: "Are you sure?", class: "button-red"
+.mt-4.clearfix
+  = link_to "Delete post", admin_news_url(@blog), method: :delete, confirm: "Are you sure?", class: "btn btn-danger"
 
