--- a/app/views/admin/news/edit.html.haml
+++ b/app/views/admin/news/edit.html.haml
@@ -1,7 +1,11 @@
-%h1
-  Editing that #{@dignified_name}!
-%p
-  = link_to "Back to all", admin_news_index_url
+.row
+  .col-md-8
+    %h1
+      Editing that #{@dignified_name}!
+  .col-md-2
+    = link_to "Delete post", admin_news_url(@blog), method: :delete, confirm: "Are you sure?", class: "btn btn-danger"
+  .col-md-2
+    = link_to "Back to all", admin_news_index_url, class: "btn btn-primary"
 - if params[:show_photos]
   %p
     - if @blog.is_listicle
@@ -104,7 +108,3 @@
     .alert.alert-info
       %p
         The content blocks accept HTML or Markdown for styling and linking things. Check out this #{link_to "Markdown cheat sheet", "https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet", target: "_blank"} if you're curious.
-
-.mt-4.clearfix
-  = link_to "Delete post", admin_news_url(@blog), method: :delete, confirm: "Are you sure?", class: "btn btn-danger"
-
