--- a/app/views/public_images/_public_image.html.erb
+++ b/app/views/public_images/_public_image.html.erb
@@ -36,10 +36,8 @@
       </div>
     </li>
   </div>
-  <!-- - unless skip_order
-  -->
-  <!--   .index-image-select
-  -->
-  <!--     %input{:class => "index_image_#{public_image.id}", :name => "index_image_id", :type => "radio", :value => "#{public_image.id}"}/
-  -->
+  <%unless skip_order%>
+    <div class= "index-image-select">
+      <input class = "index_image_#{public_image.id}", name = "index_image_id", type = "radio", value = "#{public_image.id}"}/>
+    </div>
 </div>
