--- a/app/views/public_images/_public_image.html.erb
+++ b/app/views/public_images/_public_image.html.erb
@@ -40,4 +40,5 @@
     <div class= "index-image-select">
       <input class = "index_image_#{public_image.id}", name = "index_image_id", type = "radio", value = "#{public_image.id}"}/>
     </div>
+  <% end %>
 </div>
