--- a/app/views/landing_pages/for_bike_shops.haml
+++ b/app/views/landing_pages/for_bike_shops.haml
@@ -61,7 +61,7 @@
         %p
           = link_to "Learn more", "https://bikeindex.org/lightspeed"
           or
-          = link_to "connect your Lightspeed account", "https://bikeindex.org/connect_lightspeed"
+          = link_to "connect your Lightspeed account", "https://bikeindex.org/lightspeed_interface"
 
         %h3
           Ascend Retail
