--- a/app/views/layouts/new_admin.html.haml
+++ b/app/views/layouts/new_admin.html.haml
@@ -41,7 +41,7 @@
             %li
               :ruby
                 other_links = [
-                                { title: "POS Integration", path: "https://posintegration.bikeindex.org", match_controller: false },
+                                { title: "POS Integration", path: lightspeed_interface_path, match_controller: false },
                                 { title: "Ambassador Activities", path: admin_ambassador_tasks_path, match_controller: true },
                                 { title: "Completed Ambassador Activities", path: admin_ambassador_task_assignments_path, match_controller: true },
                                 { title: "Theft Alerts", path: admin_theft_alerts_path, match_controller: true },
