--- a/app/views/info/lightspeed.html.haml
+++ b/app/views/info/lightspeed.html.haml
@@ -13,7 +13,7 @@
 
     - if current_user.present? && current_user.memberships.present?
       %p
-        All you have to do is go to #{ link_to 'bikeindex.org/connect_lightspeed', connect_lightspeed_path }, where you'll be asked to authorize Bike Index to access your Lightspeed Account.
+        All you have to do is go to #{ link_to 'bikeindex.org/lightspeed_interface', lightspeed_interface_path }, where you'll be asked to authorize Bike Index to access your Lightspeed Account.
     - else
       %p
         The first step is to create an account for yourself and your shop - you can do that <a href="#add_organization" class="scroll-to-ref">at the bottom of this page</a>
@@ -61,7 +61,7 @@
   /     %li
   /       %a{ href: '#how_lightspeed_integration_works', data: {toggle: 'tab'} }
   /         How the integration works
-      
+
   /   .tab-content
   /     %span.vendor-tab-bg
   /     #what_we_are.tab-pane.active
@@ -105,16 +105,16 @@
   /                   Lightspeed Retail Integration
   /               - else
   /                 Click on the Lightspeed Retail Integration button (at the bottom of the page for your organization once you've signed up).
-                  
+
   /           %li
   /             %p
   /               Click on "integrate with Bike Index" and follow the steps with Lightspeed Retail to connect your account.
-          
+
   /         %p.padded
   /           And that's it. Every bike you sell will be registered, so long as you put in the customer's email and the bike has a serial number in the "serial number" field in Lightspeed.
   /         %p
   /           If a customer doesn't want to be registered, put "do not register" in the notes for the sale and we won't register the bike.
-          
+
   /         .alert.alert-info
   /           %p
   /             We will not automatically register bikes that were sold before you signed up for the integration.
