--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -43,6 +43,8 @@
           %li
             - bulk_link_name = current_organization.ascend_imports? ? "Ascend Imports" : "Bulk Imports"
             = active_link bulk_link_name, organization_bulk_imports_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
+        - if current_organization.lightspeed_pos?
+          = active_link "Lightspeed Integration Panel", lightspeed_interface_path, class: "menu-item"
         %li.divider-above
           - if current_organization.paid_for?("bike_codes")
             = active_link "Registration stickers", organization_stickers_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
@@ -78,7 +80,18 @@
   - orgcontainer = "container-fluid" if controller_name == "bikes" && action_name == "index" || controller_name == "messages"
   %div{ class: orgcontainer || "container" }
     - if current_organization.law_enforcement_missing_verified_features?
-      .alert.alert-info.mb-4
+      .organization-wide-alert
         %p
           Bike Index provides additional features for verified Law Enforcement organizations. Please contact #{link_to "lily@bikeindex.org", "mailto:lily@bikeindex.org"} to get them enabled.
+    - if current_organization.bike_shop_display_integration_alert?
+      .organization-wide-alert
+        %p
+          Use Lightspeed Retail POS?
+          %ul
+            %li
+              %strong
+                = link_to "Integrate with Lightspeed Retail", lightspeed_interface_path, class: ""
+              for automatic registration of the bikes you sell.
+            %li
+              Read an full explanation of #{link_to "how the integration works", lightspeed_path}.
     = yield
