--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -4,7 +4,7 @@
       - if current_organization.display_avatar
         = image_tag current_organization.avatar.url(:medium)
       %h3
-        Admin panel
+        Admin Panel
         %span
           = current_organization.name
 
