--- a/app/views/admin/bikes/index.html.haml
+++ b/app/views/admin/bikes/index.html.haml
@@ -34,8 +34,8 @@
           .dropdown-divider
           - any_pos_active = @pos_search_type == "any_pos"
           = link_to "Any POS", admin_bikes_path(sortable_search_params.merge(search_pos: any_pos_active ? nil : "any_pos")), class: "dropdown-item #{any_pos_active ? 'active' : ''}"
-          - not_pos_active = @pos_search_type == "not_pos"
-          = link_to admin_bikes_path(sortable_search_params.merge(search_pos: not_pos_active ? nil : "not_pos")), class: "dropdown-item #{not_pos_active ? 'active' : ''}" do
+          - no_pos_active = @pos_search_type == "no_pos"
+          = link_to admin_bikes_path(sortable_search_params.merge(search_pos: no_pos_active ? nil : "no_pos")), class: "dropdown-item #{no_pos_active ? 'active' : ''}" do
             <strong>Not</strong> POS
 
       / <a class="dropdown-item" href="#">Separated link</a>
